--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="container">
         <div id="card">
             <div id="box">
-                <div id="content"><img src="../more_practice/Images/kab.jpg" alt="daino"></div>
+                <div id="content"><img src="../Images/kab.jpg" alt="daino"></div>
 
             </div>
         </div>
