--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Daino</title>
-    <link rel="stylesheet" href="../more_practice/CSS/style.css">
+    <link rel="stylesheet" href="../my-portfolio/CSS/style.css">
 </head>
 
 <body>
