Contact Me page
I did integration for a new page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
     <title>Daino</title>
-    <link rel="stylesheet" href="../my-portfolio/CSS/style.css">
+    <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" href="../more_practice/CSS/style.css">
 </head>
 
 <body>
@@ -17,14 +18,16 @@
     <div id="container">
         <div id="card">
             <div id="box">
-                <div id="content"><img src="../my-portfolio/Images/kab.jpg" alt="daino"></div>
-
+                <div id="ylw">
+                    <div id="content"><img src="../more_practice/Images/kab.jpg" alt="daino"></div>
+                </div>
             </div>
         </div>
     </div>
     <div class="navbar">
         <a id="hv" href="#home">My Profile</a>
-        <a id="hv" href="#news">Contact Me</a>
+        <a id="hv" href="../more_practice/pages/contact.html">Contact Me</a>
+    </div>
 </body>
 
 </html>
