--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Daino</title>
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="../more_practice/CSS/style.css">
+    <link rel="stylesheet" href="../my-portfolio/CSS/style.css">
 </head>
 
 <body>
@@ -19,14 +19,14 @@
         <div id="card">
             <div id="box">
                 <div id="ylw">
-                    <div id="content"><img src="../more_practice/Images/kab.jpg" alt="daino"></div>
+                    <div id="content"><img src="../my-portfolio/Images/kab.jpg" alt="daino"></div>
                 </div>
             </div>
         </div>
     </div>
     <div class="navbar">
         <a id="hv" href="#home">My Profile</a>
-        <a id="hv" href="../more_practice/pages/contact.html">Contact Me</a>
+        <a id="hv" href="../my-portfolio/pages/contact.html">Contact Me</a>
     </div>
 </body>
 
