--- a/pages/about_me.html
+++ b/pages/about_me.html
@@ -11,8 +11,19 @@
         <p>Design is more personal than it seems here..</p>
     </header>
 
-    <figure id="astro">
-        <img src="../Images/Daino.png" alt="astraunant">
+    <div class="flip-card">
+        <div class="flip-card-inner">
+            <div class="flip-card-front">
+                <img id="Daino" src="../Images/Daino.png" alt="Avatar" style="width:300px;height:215px;margin-top: -5%;margin-left: -50%;border-radius: 50%;">
+            </div>
+            <div class="flip-card-back">
+                <h1>Dain-amic Design</h1>
+                <p>"Where Design meets simplicity"
+                </p>
+                <button id="inquire">Inquire</button>
+            </div>
+        </div>
+    </div>
 
 </body>
 
