Chages to p on front page and a few more server side changes

--- a/pages/about_me.html
+++ b/pages/about_me.html
@@ -24,7 +24,17 @@
             </div>
         </div>
     </div>
+    <div class="info">
 
+        <div id="perspective1">
+            <img class="perspective1" src="../Images/astraunant.jpg" alt="astraunant">
+            <h1 id="detail">True To Purpose</h1>
+
+        </div>
+    </div>
+    <div id="rays">
+        <video autoplay playsinline loop muted width="310px" height="300px" src="../videos/rays.mp4">The Very Idea of a Simple design</video>
+    </div>
 </body>
 
 </html>
