--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         Peter Daino
-        <p>UI/UX Designer, Web Developer</p>
+        <p>UI/UX Developer/Designer, Web Developer</p>
         <div>
             <button id="more">Know More</button>
         </div>
