--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <title>Daino</title>
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="../my-portfolio/CSS/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <header>
-        Peter Daino
-        <p>UI/UX Developer/Designer, Web Developer</p>
+        Freelance Web<br>Developer
+        <p>For anything to deal with UI/UX Design/ Development.<br> Clean and Intuitive Designas and Mock-ups, I'll get your<br> brand up and running faster than you can say Desi...</p>
         <div>
             <button id="more">Know More</button>
         </div>
@@ -27,6 +29,7 @@
     <div class="navbar">
         <a id="hv" href="#home">My Profile</a>
         <a id="hv" href="../my-portfolio/pages/contact.html">Contact Me</a>
+        <h1>Peter Daino</h1>
     </div>
 </body>
 
