--- a/pages/more.html
+++ b/pages/more.html
@@ -13,8 +13,10 @@
 
 <body>
     <div class="navbar">
-        <a id="hv" href="#home">My Profile</a>
-        <a id="hv" href="../my-portfolio/pages/contact.html">Contact Me</a>
+        <a id="hv" href="#home">Design</a>
+        <a id="hv" href="../my-portfolio/pages/contact.html">My @rtSpace</a>
+        <a id="hv" href="../my-portfolio/pages/contact.html">Illustrations</a>
+        <a id="hv" href="../my-portfolio/pages/contact.html">Mind and Matter</a>
         <h1>Peter Daino</h1>
     </div>
 </body>
