know more button

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="navbar">
         <a id="hv" href="#home">My Profile</a>
         <a id="hv" href="../my-portfolio/pages/contact.html">Contact Me</a>
-        <h1>Peter Daino</h1>
+        <h1>Daino Design</h1>
     </div>
 </body>
 
