--- a/pages/more.html
+++ b/pages/more.html
@@ -17,7 +17,7 @@
         <a id="hv" href="../my-portfolio/pages/contact.html">My @rtSpace</a>
         <a id="hv" href="../my-portfolio/pages/contact.html">Illustrations</a>
         <a id="hv" href="../my-portfolio/pages/contact.html">Mind and Matter</a>
-        <h1>Peter Daino</h1>
+        <h1>Daino Design</h1>
     </div>
 </body>
 
