--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        Freelance Web<br>Developer
+        <h1>Freelance Web<br>Developer</h1>
         <p>For anything to deal with UI/UX Design/ Development.<br> Clean and Intuitive Designas and Mock-ups, I'll get your<br> brand up and running faster than you can say Desi...</p>
         <div>
             <button id="more">Know More</button>
